# book-feelgood

./: .gitignore  .pre-commit-config.yaml  README.md  activities-a.yml  activities-t.yml  activities.yml  gimme.py  pre_commit.ps1  pyproject.toml
.github/workflows/: bad-action.yml  book.yml  book_manual.yml  book_test.yml  ci.yml  codeql.yml
activities/: a.yml  j.yml  t-tst.yml  t.yml
book_feelgood/: __main__.py  book.py  parse.py  requirements.txt
config/: banner.yml  config.yml
source/: banner.yml  book.py  book.yml  config.yml  headers.yml  parse.py
tests/: conftest.py  example_pytest.py  test_book.py  test_parse.py
