[project]
name = "book_feelgood"
version = "0.4.0"
description = "Book cool activities"
dependencies = [
    "PyYAML",
    "requests",
    "loguru"
]

[project.urls]
homepage = "https://github.com/teodornoren/book-feelgood"
repository = "https://github.com/teodornoren/book-feelgood"

[tool.setuptools]
packages = ["book_feelgood"]

[project.optional-dependencies]
ci = [
  "black",
  "flake8",
]


[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'