[project]
name = "book_feelgood"
version = "0.4.0"
description = "Book cool activities"
dependencies = [
    "PyYAML",
    "requests",
    "loguru"
]

[project.urls]
homepage = "https://github.com/teodornoren/book-feelgood"
repository = "https://github.com/teodornoren/book-feelgood"

[tool.setuptools]
packages = ["book_feelgood"]

[project.optional-dependencies]
tests = [
  "coverage",
  "pytest",
]
ci = [
  "black",
  "flake8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
include = ["book_feelgood/*"]
omit = ["tests"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'